# SocketAI-reproduce

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
manifests/: dataset-main-p0-33-66-100.jsonl
manifests/groundtruth/: annotations_samples.jsonl
scripts/: plot_batch_results.py
socketai_reproduce/: __init__.py  cli.py  config.py  env.py  package_loader.py  workflow.py
socketai_reproduce/analysis/: __init__.py  models.py
socketai_reproduce/codeql_queries/: qlpack.yml  socketai-javascript.qls  suspicious-download-command.ql  suspicious-exec.ql  suspicious-filesystem.ql  suspicious-network.ql
socketai_reproduce/llm/: __init__.py  client.py  prompts.py
socketai_reproduce/prescreener/: __init__.py  codeql.py
socketai_reproduce/reporting/: __init__.py  exporters.py
tests/: test_cli.py  test_codeql.py  test_env.py  test_models.py  test_package_loader.py  test_workflow.py
utils/: find_archives.py
